Closed Bug 495717 Opened 14 years ago Closed 14 years ago

Unable to compile nss/cmd/certutil/keystuff.c on WinCE

Categories

(NSS :: Tools, defect, P2)

ARM
Windows CE
defect

Tracking

(Not tracked)

VERIFIED FIXED
3.12.4

People

(Reporter: hiro, Assigned: hiro)

References

Details

Attachments

(1 file)

This bug is spined out from Bug 483653.
Blocks: 483653
I forgot to attach the patch?
Attachment #380754 - Flags: review?(nelson)
Comment on attachment 380754 [details] [diff] [review]
A patch (checked in)

Hiroyuke,
I thought WinCE does not have stdin.  Has that changed?

>-#elif XP_UNIX
>+#elif defined(XP_UNIX) || defined(WINCE)
> 	c = getc(stdin);
> #else
> 	c = getch();
> #endif
stdin is defined in stdlib.h on WinCE like this:

#define stdin  _getstdfilex(0)

I do not investigate what _getstdfilex is yet.
Assignee: nobody → ikezoe
Status: NEW → ASSIGNED
Priority: -- → P2
Summary: Unable to compile nss/cmd/cerutil/keystuff.c on WinCE → Unable to compile nss/cmd/certutil/keystuff.c on WinCE
Target Milestone: --- → 3.12.4
Comment on attachment 380754 [details] [diff] [review]
A patch (checked in)

r=nelson.  I will commit this.
Attachment #380754 - Flags: review?(nelson) → review+
Comment on attachment 380754 [details] [diff] [review]
A patch (checked in)

Checking in keystuff.c; new revision: 1.20; previous revision: 1.19
Attachment #380754 - Attachment description: A patch → A patch (checked in)
I'm marking this fixed.  
Please attach patches for any follow up issues to bug 483653.  Thanks.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Blocks: 483654
verified with 1.9.2 build and winmo alpha3
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.