Bug 495717: Unable to compile nss/cmd/cerutil/keystuff.c on WinCE Patch contributed by Hiroyuki Ikezoe <ikezoe@clear-code.com>